[gd_scene load_steps=5 format=3 uid="uid://o7eclnlr3m4c"]

[ext_resource type="Texture2D" uid="uid://cvd24uock8fup" path="res://assets/frames/hidden_frame_blank.png" id="1_4yu35"]
[ext_resource type="Script" path="res://nodes/memory_tile/memory_tile.gd" id="1_tayir"]
[ext_resource type="Texture2D" uid="uid://csb3d02go1om7" path="res://assets/frames/blue_frame.png" id="2_ctiup"]
[ext_resource type="Texture2D" uid="uid://cjpdfks6vcwpc" path="res://assets/glitch/admin_widget.png" id="3_ikwlx"]

[node name="MemoryTile" type="TextureButton" groups=["memory_tile"]]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("1_4yu35")
script = ExtResource("1_tayir")

[node name="FrameImage" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ctiup")

[node name="Image" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(42, 42)
texture = ExtResource("3_ikwlx")

[connection signal="pressed" from="." to="." method="_on_pressed"]
